# moz-books

./: .env_sample  Makefile  Pipfile  README.md  doc.sh  pyproject.toml  pytest.ini  renovate.json  setup.py
.circleci/: config.yml
docs/: conf.py  index.rst  modules.rst  moz_books.calil.rst  moz_books.exception.rst  moz_books.google.rst  moz_books.interface.rst  moz_books.opendb.rst  moz_books.rakuten.rst  moz_books.rst
examples/: all.py  calil.py  google.py  opendb.py  rakuten.py
mmbooks/: __init__.py  book.py  book_info.py  book_search_query.py  books.py  calil.py  calil_book.py  calil_books.py  cli.py  core.py  google.py  google_book.py  google_books.py  opendb.py  opendb_book.py  opendb_books.py  rakuten.py  rakuten_book.py  rakuten_books.py  service.py
scripts/: doc.sh
src/moz_books/: __init__.py  book.py  log.py  search_params.py  service.py
src/moz_books/calil/: calil_book.py  calil_book_factory.py  calil_request_params_factory.py  calil_service.py
src/moz_books/exception/: __init__.py  invalid_response_error.py  invalid_search_params_error.py  not_found_env_value_error.py
src/moz_books/google/: google_book.py  google_book_factory.py  google_request_params_factory.py  google_service.py
src/moz_books/interface/: i_book_factory.py  i_request_params_factory.py  i_service.py
src/moz_books/opendb/: opendb_book.py  opendb_book_factory.py  opendb_request_params_factory.py  opendb_service.py
src/moz_books/rakuten/: rakuten_book.py  rakuten_book_factory.py  rakuten_request_params_factory.py  rakuten_service.py
tests/: book_search_query_test.py  calil_test.py  core_test.py  google_test.py  opendb_test.py  rakuten_books_test.py  rakuten_test.py
tests/ut/moz_books/: mock_response.py  test_book.py  test_search_params.py
tests/ut/moz_books/calil/: test_calil_book.py  test_calil_book_factory.py  test_calil_request_params_factory.py  test_calil_service.py
tests/ut/moz_books/google/: test_google_book_factory.py  test_google_service.py
tests/ut/moz_books/opendb/: test_opendb_service.py
tests/ut/moz_books/rakuten/: test_rakuten_book.py  test_rakuten_book_factory.py  test_rakuten_request_params_factory.py  test_rakuten_service.py
