[tool.poetry]
name = "moz-books"
version = "0.1.0"
description = "mozkzki's book service library."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-books"
repository = "https://github.com/mozkzki/moz-books"
documentation = "https://github.com/mozkzki/moz-books/wiki"
keywords = ['book', 'rakuten', 'calil']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "0.21.1"
requests = "2.32.3"
coloredlogs = "15.0.1"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.11.2"
pytest = "7.4.4"
black = "23.12.1"
pytest-cov = "4.1.0"
coverage = "7.6.1"
isort = "5.13.2"
sphinx = "6.2.1"
sphinx-rtd-theme = "1.3.0"
types-requests = "2.32.0.20240712"
pytest-env = "0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
